# juceTemplate

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
plugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
